# action-repository-updater

./: CONTRIBUTING.md  README.md  action.yaml  pyproject.toml
.github/: release-drafter.yml
action/: Dockerfile
docker/: Dockerfile
repositoryupdater/: __init__.py  addon.py  cli.py  repository.py
